# veriagent

./: .gitignore  README.md  index.html  pyrightconfig.json
.github/workflows/: deploy-frontend.yml
assets/: index-5WWb772K.css  index-B0M4wE9O.js  index-BElgkDCo.css  index-Bz_fyrDO.js  index-ClIDpCm4.css  index-D42eMcUK.js  index-D8pvKR4F.css  index-DIPy8drS.js  index-DJoUwAoU.css  index-Dc4rbALn.js  index-DeYWo0DG.js  index-DkWKl49x.js  index-pqJRLzFs.js  index-tHh1kj6W.js
backend/: requirements.txt
backend/app/: anchoring.py  auth.py  auto_anchor_scheduler.py  batch_anchoring.py  hashing.py  main.py  merkle.py  models.py  receipts.py  registration.py  signatures.py  storage.py
backend/tests/: conftest.py  support.py  test_agents_api.py  test_anchoring.py  test_api.py  test_audit_event_auth.py  test_auto_anchor_scheduler.py  (+13 more)
contracts/: foundry.toml
deploy/: nginx-veriagent-api.conf.example
docs/: 00-vision.md  02-devlog.md  03-api.md  04-testing.md  05-deployment.md  06-threat-model.md  07-backup-restore.md  08-architecture.md  09-demo-mode.md  10-v1-release-checklist.md  11-demo-script.md  12-release-notes-v1.0.0-rc1.md  13-commercial-readiness-roadmap.md  14-registration-workflow.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: backup_sqlite.sh  restore_sqlite.sh  sign_demo_event.py
sdk/python/: README.md  pyproject.toml
sdk/python/tests/: test_sdk.py
sdk/python/veriagent/: __init__.py  client.py  identity.py  signing.py
sdk/python/veriagent.egg-info/: SOURCES.txt  requires.txt  top_level.txt
(+16 files in other folders)
